Seeded database with fake data Fixed a few layout issues on the frontend

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,7 +1,7 @@
 /* ---------- GENERAL ---------- */
 body {
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding: 0;
   background: #f5f5f5;
   margin: 0;
 }
